Restructuring framework.py

--- a/examples/data_drifts/cyber_attack_classification/drift_detection.ipynb
+++ b/examples/data_drifts/cyber_attack_classification/drift_detection.ipynb
@@ -164,9 +164,17 @@
    "execution_count": 7,
    "id": "1adaa6a1-9e00-4365-a886-7f1785f04f2d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleting the folder:  oodles_smart_data\n"
+     ]
+    }
+   ],
    "source": [
-    "inference_batch_size = 256\n",
+    "batch_size = 10000\n",
     "cfg = {\n",
     "    # Define your metrics to identify data drifts\n",
     "    \"checks\": [\n",
@@ -183,7 +191,7 @@
     "        'need_gt': True,\n",
     "        },\n",
     "    ], \n",
-    "    \"batch_size\": inference_batch_size,\n",
+    "    \"batch_size\": batch_size,\n",
     "    \"training_args\": {\n",
     "        \"fold_name\": 'oodles_smart_data', \n",
     "        \"log_folder\": \"oodles_logs\",\n",
@@ -193,8 +201,8 @@
     "framework = Framework(cfg)\n",
     "\n",
     "@monitor(framework)\n",
-    "def model_predict(args):\n",
-    "    return args['model'].predict(args['X_test'])"
+    "def model_predict(model, inputs):\n",
+    "    return model.predict(inputs['data'])"
    ]
   },
   {
@@ -210,14 +218,30 @@
    "execution_count": 8,
    "id": "ec793e01-fe2a-4ee0-b258-968936853950",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_ids = []\n",
+    "for i in range(int(len(X_test)/batch_size)):\n",
+    "    inputs = {'data': X_test[i*batch_size:(i+1)*batch_size]}\n",
+    "    \n",
+    "    _, ids = model_predict(classifier, inputs)\n",
+    "    all_ids += ids"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "512156ad-41d8-423a-a3b3-f49689bb70b5",
+   "metadata": {},
+   "source": [
+    "#### Attach ground truth to Oodles framework"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "49eab27d-a9c0-427f-ae81-a068ef2801ae",
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/vipul/opt/anaconda3/envs/tensorflow_env/lib/python3.10/site-packages/oodles-0.1.dev0-py3.10.egg/oodles/core/classes/framework.py:375: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -228,13 +252,15 @@
     }
    ],
    "source": [
-    "for i in range(int(len(X_test)/inference_batch_size)):\n",
-    "    inputs = {'model': classifier, \n",
-    "              'X_test': X_test[i*inference_batch_size:(i+1)*inference_batch_size]}\n",
-    "    \n",
-    "    _, idens = model_predict(inputs)\n",
-    "    framework.attach_ground_truth({'identifier': idens, \n",
-    "                                   'gt': y_test[i*inference_batch_size:(i+1)*inference_batch_size]})"
+    "framework.attach_ground_truth({'id': all_ids, 'gt': y_test[0:len(all_ids)]})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46d07f60-a4b8-4fac-bb11-175c0c57634f",
+   "metadata": {},
+   "source": [
+    "As can be noted from above, our two drift monitors predict a drift around the timestamp of 111k"
    ]
   },
   {
@@ -242,7 +268,7 @@
    "id": "98149437-3f72-4db7-86ce-ce93d8815d51",
    "metadata": {},
    "source": [
-    "#### Checking the Oodles dashboard to verify the location of drifts"
+    "### Verification of drifts with the Oodles dashboard"
    ]
   },
   {
@@ -250,7 +276,7 @@
    "id": "09c998ab-9381-4d51-a52d-9853828f7e70",
    "metadata": {},
    "source": [
-    "Apart from custom monitors added by the user, the Oodles framework automatically logs important metrics such as accuracy for the user to observe the performance of their models. The dashboard is currently integrated with tensorboard and can be launched by using the following command: tensorboard --logdir=oodles_logs/\n",
+    "The Oodles framework automatically logs important metrics such as accuracy for the user to observe the performance of their models. The dashboard is currently integrated with tensorboard and can be launched by locating the logs directory ('oodles_logs' by default) and using the following command: tensorboard --logdir=oodles_logs/\n",
     "\n",
     "The following is a screenshot of average accuracy versus time from the dashboard. We can observe a data drift around the timestamp of 111k, which is also predicted by our drift monitors."
    ]
