--- a/examples/edge_cases/orientation_classification/oodles_run_model.ipynb
+++ b/examples/edge_cases/orientation_classification/oodles_run_model.ipynb
@@ -73,7 +73,6 @@
    "outputs": [],
    "source": [
     "real_world_test_cases = 'data/real_world_testing_data.json'\n",
-    "data_save_fold_name = 'oodles_smart_data'\n",
     "golden_testing_file = 'data/golden_testing_data.json'\n",
     "annotation_args = {'master_file': 'data/master_annotation_data.json'}\n",
     "\n",
@@ -177,7 +176,7 @@
     "        \"data_transformation_func\": input_to_dataset_transformation,  \n",
     "        \"annotation_method\": {\"method\": AnnotationMethod.MASTER_FILE, \"args\": annotation_args}, \n",
     "        \"training_func\": train_model_lr, \n",
-    "        \"fold_name\": data_save_fold_name,  \n",
+    "        \"fold_name\": 'oodles_smart_data',  \n",
     "        \"orig_training_file\": orig_training_file,  \n",
     "    },\n",
     "\n",
@@ -207,8 +206,8 @@
     "framework_lr = Framework(cfg)\n",
     "\n",
     "@monitor(framework_lr)\n",
-    "def model_predict(args):\n",
-    "    return args['model'].predict(args['kps'])"
+    "def model_predict(model, inputs):\n",
+    "    return model.predict(inputs['data'])"
    ]
   },
   {
@@ -240,7 +239,7 @@
       "---------------------------------------------\n",
       "---------------------------------------------\n",
       "Old model accuracy:  0.8586231008836056\n",
-      "Retrained model accuracy (ie 251 smartly collected data-points added):  0.9597609815014939\n",
+      "Retrained model accuracy (ie 251 smartly collected data-points added):  0.94386879410082\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n"
      ]
@@ -254,7 +253,8 @@
     "for i,elem in enumerate(X_test):\n",
     "\n",
     "    # Do model prediction\n",
-    "    preds, idens = model_predict({\"model\": model, \"kps\": elem.reshape(1, -1), \"id\": [id[i]]})\n",
+    "    inputs = {\"data\": elem.reshape(1, -1), \"id\": [id[i]]}\n",
+    "    preds, idens = model_predict(model, inputs)\n",
     "\n",
     "    # Attach Ground Truth\n",
     "    framework_lr.attach_ground_truth({'id': idens, 'gt': [y_test[i]]})\n",
@@ -313,7 +313,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-28 14:57:06.394362: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
+      "2022-12-08 15:24:05.033405: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -322,13 +322,13 @@
      "output_type": "stream",
      "text": [
       "Evaluating on  15731  data-points\n",
-      "492/492 [==============================] - 0s 436us/step\n"
+      "492/492 [==============================] - 1s 657us/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.22344415485347402"
+       "0.23634861102282118"
       ]
      },
      "execution_count": 10,
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Update the Oodles config with new training workflows and checks. Let's also add a check for edge-cases when model confidence is low."
+    "Update the Oodles config with new training workflows and checks. Let's also add a check for edge-cases when model confidence is low (because why not!)."
    ]
   },
   {
@@ -379,10 +379,10 @@
     "framework_dnn = Framework(cfg)\n",
     "\n",
     "@monitor(framework_dnn)\n",
-    "def model_predict(args):\n",
+    "def model_predict(model, inputs):\n",
     "    with open('evaluation_logs.txt', 'w') as f:\n",
     "        with redirect_stdout(f):\n",
-    "            return args['model'].predict(args['kps'])"
+    "            return model.predict(inputs['data'])"
    ]
   },
   {
@@ -394,13 +394,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50  edge-cases collected out of  188  inferred samples\n",
-      "100  edge-cases collected out of  384  inferred samples\n",
-      "150  edge-cases collected out of  590  inferred samples\n",
-      "200  edge-cases collected out of  804  inferred samples\n",
-      "250  edge-cases collected out of  968  inferred samples\n",
+      "50  edge-cases collected out of  196  inferred samples\n",
+      "100  edge-cases collected out of  409  inferred samples\n",
+      "150  edge-cases collected out of  599  inferred samples\n",
+      "200  edge-cases collected out of  805  inferred samples\n",
+      "250  edge-cases collected out of  972  inferred samples\n",
       "Kicking off re-training\n",
-      "251 data-points selected out of 972\n",
+      "251 data-points selected out of 974\n",
       "Training on:  oodles_smart_data/1/training_dataset.json  which has  2255  data-points\n",
       "Trained model exists. Skipping training again.\n",
       "Model retraining done...\n",
@@ -408,13 +408,13 @@
       "Training on:  data/training_data.json  which has  1000  data-points\n",
       "Trained model exists. Skipping training again.\n",
       "Evaluating on  15731  data-points\n",
-      "492/492 [==============================] - 0s 487us/step\n",
+      "492/492 [==============================] - 0s 370us/step\n",
       "Evaluating on  15731  data-points\n",
-      "492/492 [==============================] - 0s 502us/step\n",
+      "492/492 [==============================] - 0s 371us/step\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n",
-      "Old model accuracy:  0.22344415485347402\n",
-      "Retrained model accuracy (ie 251 smartly collected data-points added):  0.699574089377662\n",
+      "Old model accuracy:  0.23634861102282118\n",
+      "Retrained model accuracy (ie 251 smartly collected data-points added):  0.8675862945775856\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n"
      ]
@@ -433,7 +433,7 @@
     "for i,elem in enumerate(real_world_dataset):\n",
     "\n",
     "    # Do model prediction\n",
-    "    preds, idens = model_predict({\"model\": model, \"kps\": elem[0][\"kps\"], \"id\": elem[0][\"id\"]})\n",
+    "    preds, idens = model_predict(model, {\"data\": elem[0][\"data\"], \"id\": elem[0][\"id\"]})\n",
     "\n",
     "    # Attach ground truth\n",
     "    this_elem_gt = [gt_data[all_gt_ids.index(x)]['gt'] for x in elem[0]['id']]\n",
