--- a/examples/recommendation_biases/shopping_cart_rec/recommendation_bias.ipynb
+++ b/examples/recommendation_biases/shopping_cart_rec/recommendation_bias.ipynb
@@ -135,32 +135,22 @@
     "framework = Framework(cfg)\n",
     "\n",
     "@monitor(framework)\n",
-    "def model_predict(args):\n",
-    "    return args['model'].predict(args['X_test'])"
+    "def model_predict(model, inputs):\n",
+    "    return model.predict(inputs['data'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "27f9dccc-2710-4253-a98b-4b390378cc85",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/vipul/opt/anaconda3/envs/tensorflow_env/lib/python3.10/site-packages/oodles-0.1.dev0-py3.10.egg/oodles/core/classes/framework.py:376: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  smart_data_idx = np.where(all_idens_in_smart_data == this_iden)[0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(int(len(x_test)/inference_batch_size)):\n",
-    "    inputs = {'model': model, \n",
-    "              'X_test': x_test[i*inference_batch_size:(i+1)*inference_batch_size]}\n",
+    "    inputs = {'data': x_test[i*inference_batch_size:(i+1)*inference_batch_size]}\n",
     "    \n",
-    "    y_pred, idens = model_predict(inputs)\n",
-    "    framework.attach_ground_truth({'identifier': idens, \n",
+    "    y_pred, ids = model_predict(model, inputs)\n",
+    "    framework.attach_ground_truth({'id': ids, \n",
     "                                   'gt': y_test[i*inference_batch_size:(i+1)*inference_batch_size]})"
    ]
   },
@@ -177,7 +167,7 @@
    "id": "976d1329-8a63-4d94-9ed3-cf233a15a998",
    "metadata": {},
    "source": [
-    "From the below plot, we can see that most of the items that are recommended have low popularity (<0.0002). Hence, our model does not suffer from popularity bias."
+    "From the below plot, we can see that most of the items that are recommended have low popularity (<0.0002). Thus, our model does not look to be suffering from popularity bias."
    ]
   },
   {
