Remove unwanted changes

--- a/examples/data_drifts/cyber_attack_classification/drift_detection.ipynb
+++ b/examples/data_drifts/cyber_attack_classification/drift_detection.ipynb
@@ -164,7 +164,15 @@
    "execution_count": 7,
    "id": "1adaa6a1-9e00-4365-a886-7f1785f04f2d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleting the folder:  oodles_smart_data\n"
+     ]
+    }
+   ],
    "source": [
     "batch_size = 10000\n",
     "cfg = {\n",
