Fixes to support data drift in case of orientation classification example

--- a/examples/edge_cases/orientation_classification/oodles_data_drift.ipynb
+++ b/examples/edge_cases/orientation_classification/oodles_data_drift.ipynb
@@ -25,7 +25,7 @@
     "from oodles import ModelSignal, AnnotationMethod, Anomaly, DataDriftAlgo\n",
     "\n",
     "from dataset import input_to_dataset_transformation, read_json, write_json, KpsDataset\n",
-    "from pushup_signal import pushup_signal\n",
+    "from pushup_signal import pushup_signal, plot_all_cluster\n",
     "from contextlib import redirect_stdout\n",
     "\n",
     "import tensorflow as tf\n",
@@ -357,7 +357,22 @@
     "low_conf_edge_case = Signal(ModelSignal.BINARY_ENTROPY_CONFIDENCE, \n",
     "                is_model_signal=True, extra_args={'conf_threshold': 0.8})\n",
     "\n",
-    "cfg['checks'][0].update({\"signal_formulae\": (pushup_edge_case | low_conf_edge_case)})\n",
+    "cfg['checks'] = [\n",
+    "    # {\n",
+    "    #     'type': Anomaly.EDGE_CASE, \n",
+    "    #     \"signal_formulae\": (pushup_edge_case | low_conf_edge_case)\n",
+    "    # },\n",
+    "    {\n",
+    "        'type': Anomaly.DATA_DRIFT,\n",
+    "        'reference_dataset': orig_training_file,\n",
+    "        'cluster_plot_func': plot_all_cluster,\n",
+    "    },\n",
+    "    {\n",
+    "        'type': Anomaly.CONCEPT_DRIFT,\n",
+    "        'algorithm': DataDriftAlgo.DDM  \n",
+    "    }\n",
+    "]\n",
+    "\n",
     "cfg['training_args'].update({'training_func': train_model_dnn})\n",
     "cfg['evaluation_args'].update({'inference_func': get_accuracy_dnn})"
    ]
