Restructuring examples folder and fixing small bug

--- a/examples/orientation_classification/oodles_edge_cases.ipynb
+++ b/examples/orientation_classification/oodles_edge_cases.ipynb
@@ -98,7 +98,7 @@
      "output_type": "stream",
      "text": [
       "Training on:  data/training_data.json  which has  1000  data-points\n",
-      "Trained model exists. Skipping training again.\n"
+      "Model saved at:  trained_models_lr/version_0\n"
      ]
     }
    ],
@@ -159,10 +159,6 @@
     "    \"checks\": [{\n",
     "        'type': Anomaly.EDGE_CASE, \n",
     "        \"signal_formulae\": pushup_edge_case\n",
-    "    },\n",
-    "    {\n",
-    "        'type': Anomaly.CONCEPT_DRIFT,\n",
-    "        'algorithm': DataDriftAlgo.DDM  \n",
     "    }],\n",
     "    \"data_identifier\": \"id\",\n",
     "    \"batch_size\": inference_batch_size,\n",
@@ -189,15 +185,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deleting the folder:  oodles_smart_data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "framework_lr = Framework(cfg)\n",
     "\n",
@@ -225,7 +213,7 @@
       "Kicking off re-training\n",
       "251 data-points selected out of 371\n",
       "Training on:  oodles_smart_data/1/training_dataset.json  which has  2255  data-points\n",
-      "Trained model exists. Skipping training again.\n",
+      "Model saved at:  trained_models_lr/version_1\n",
       "Model retraining done...\n",
       "Generating comparison report...\n",
       "Training on:  data/training_data.json  which has  1000  data-points\n",
@@ -287,8 +275,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training on:  data/training_data.json  which has  1000  data-points\n",
-      "Trained model exists. Skipping training again.\n"
+      "Training on:  data/training_data.json  which has  1000  data-points\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-12-13 14:02:37.803481: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "3/3 [==============================] - 1s 161ms/step - loss: 136.7002 - binary_accuracy: 0.2826\n",
+      "Epoch 2/10\n",
+      "3/3 [==============================] - 1s 181ms/step - loss: 129.5490 - binary_accuracy: 0.2812\n",
+      "Epoch 3/10\n",
+      "3/3 [==============================] - 1s 170ms/step - loss: 120.7798 - binary_accuracy: 0.3034\n",
+      "Epoch 4/10\n",
+      "3/3 [==============================] - 1s 162ms/step - loss: 113.0427 - binary_accuracy: 0.2839\n",
+      "Epoch 5/10\n",
+      "3/3 [==============================] - 1s 167ms/step - loss: 101.4785 - binary_accuracy: 0.3477\n",
+      "Epoch 6/10\n",
+      "3/3 [==============================] - 1s 166ms/step - loss: 92.1099 - binary_accuracy: 0.3008\n",
+      "Epoch 7/10\n",
+      "3/3 [==============================] - 1s 166ms/step - loss: 90.2377 - binary_accuracy: 0.3190\n",
+      "Epoch 8/10\n",
+      "3/3 [==============================] - 1s 169ms/step - loss: 77.1374 - binary_accuracy: 0.3581\n",
+      "Epoch 9/10\n",
+      "3/3 [==============================] - 1s 185ms/step - loss: 73.6066 - binary_accuracy: 0.3659\n",
+      "Epoch 10/10\n",
+      "3/3 [==============================] - 1s 180ms/step - loss: 69.8488 - binary_accuracy: 0.3711\n",
+      "INFO:tensorflow:Assets written to: trained_models_dnn/version_0/assets\n",
+      "Model saved at:  trained_models_dnn/version_0\n"
      ]
     }
    ],
@@ -310,25 +333,17 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-12-08 15:24:05.033405: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Evaluating on  15731  data-points\n",
-      "492/492 [==============================] - 1s 657us/step\n"
+      "492/492 [==============================] - 0s 498us/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.23634861102282118"
+       "0.22382556735109022"
       ]
      },
      "execution_count": 10,
@@ -394,27 +409,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50  edge-cases collected out of  196  inferred samples\n",
-      "100  edge-cases collected out of  409  inferred samples\n",
-      "150  edge-cases collected out of  599  inferred samples\n",
+      "50  edge-cases collected out of  188  inferred samples\n",
+      "100  edge-cases collected out of  384  inferred samples\n",
+      "150  edge-cases collected out of  593  inferred samples\n",
       "200  edge-cases collected out of  805  inferred samples\n",
-      "250  edge-cases collected out of  972  inferred samples\n",
+      "250  edge-cases collected out of  964  inferred samples\n",
       "Kicking off re-training\n",
-      "251 data-points selected out of 974\n",
+      "251 data-points selected out of 968\n",
       "Training on:  oodles_smart_data/1/training_dataset.json  which has  2255  data-points\n",
-      "Trained model exists. Skipping training again.\n",
+      "Epoch 1/10\n",
+      "8/8 [==============================] - 1s 162ms/step - loss: 108.9199 - binary_accuracy: 0.3809\n",
+      "Epoch 2/10\n",
+      "8/8 [==============================] - 1s 162ms/step - loss: 72.8014 - binary_accuracy: 0.4009\n",
+      "Epoch 3/10\n",
+      "8/8 [==============================] - 1s 162ms/step - loss: 50.1117 - binary_accuracy: 0.6113\n",
+      "Epoch 4/10\n",
+      "8/8 [==============================] - 1s 160ms/step - loss: 45.2109 - binary_accuracy: 0.7466\n",
+      "Epoch 5/10\n",
+      "8/8 [==============================] - 1s 159ms/step - loss: 42.6730 - binary_accuracy: 0.7676\n",
+      "Epoch 6/10\n",
+      "8/8 [==============================] - 1s 172ms/step - loss: 37.1132 - binary_accuracy: 0.7188\n",
+      "Epoch 7/10\n",
+      "8/8 [==============================] - 1s 168ms/step - loss: 32.2595 - binary_accuracy: 0.6504\n",
+      "Epoch 8/10\n",
+      "8/8 [==============================] - 1s 167ms/step - loss: 29.8832 - binary_accuracy: 0.6987\n",
+      "Epoch 9/10\n",
+      "8/8 [==============================] - 1s 161ms/step - loss: 28.2743 - binary_accuracy: 0.7563\n",
+      "Epoch 10/10\n",
+      "8/8 [==============================] - 1s 162ms/step - loss: 25.2386 - binary_accuracy: 0.7393\n",
+      "INFO:tensorflow:Assets written to: trained_models_dnn/version_1/assets\n",
+      "Model saved at:  trained_models_dnn/version_1\n",
       "Model retraining done...\n",
       "Generating comparison report...\n",
       "Training on:  data/training_data.json  which has  1000  data-points\n",
       "Trained model exists. Skipping training again.\n",
       "Evaluating on  15731  data-points\n",
-      "492/492 [==============================] - 0s 370us/step\n",
+      "492/492 [==============================] - 0s 416us/step\n",
       "Evaluating on  15731  data-points\n",
-      "492/492 [==============================] - 0s 371us/step\n",
+      "492/492 [==============================] - 0s 406us/step\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n",
-      "Old model accuracy:  0.23634861102282118\n",
-      "Retrained model accuracy (ie 251 smartly collected data-points added):  0.8675862945775856\n",
+      "Old model accuracy:  0.22382556735109022\n",
+      "Retrained model accuracy (ie 251 smartly collected data-points added):  0.6579365583878966\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n"
      ]
