Removing tf dependency from dataset.py

--- a/examples/orientation_classification/uptrain_edge_cases.ipynb
+++ b/examples/orientation_classification/uptrain_edge_cases.ipynb
@@ -80,7 +80,7 @@
      "output_type": "stream",
      "text": [
       "Training on:  data/training_data.json  which has  1000  data-points\n",
-      "Trained model exists. Skipping training again.\n"
+      "Model saved at:  trained_models_lr/version_0\n"
      ]
     }
    ],
@@ -201,7 +201,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleting the folder:  uptrain_logs\n"
+      "Deleting the folder:  uptrain_smart_data__edge_cases\n",
+      "Deleting the folder:  uptrain_logs\n",
+      "132  edge-cases collected out of  256  inferred samples\n",
+      "246  edge-cases collected out of  512  inferred samples\n",
+      "368  edge-cases collected out of  768  inferred samples\n",
+      "Kicking off re-training\n",
+      "368 data-points selected out of 768\n",
+      "Training on:  uptrain_smart_data__edge_cases/1/training_dataset.json  which has  2840  data-points\n",
+      "Model saved at:  trained_models_lr/version_1\n",
+      "Model retraining done...\n",
+      "Generating comparison report...\n",
+      "Training on:  data/training_data.json  which has  1000  data-points\n",
+      "Trained model exists. Skipping training again.\n",
+      "Evaluating on  15731  data-points\n",
+      "Evaluating on  15731  data-points\n",
+      "---------------------------------------------\n",
+      "---------------------------------------------\n",
+      "Old model accuracy:  0.8586231008836056\n",
+      "Retrained model accuracy (ie 368 smartly collected data-points added):  0.9691055876930901\n",
+      "---------------------------------------------\n",
+      "---------------------------------------------\n"
      ]
     }
    ],
@@ -213,11 +233,7 @@
     "inference_batch_size = 256\n",
     "pred_classes = []\n",
     "model = joblib.load(\"trained_models_lr/\" + 'version_0')\n",
-    "for i in range(int(np.ceil(len(X_test)/inference_batch_size))):\n",
-    "\n",
-    "    if i==0:\n",
-    "        break\n",
-    "    \n",
+    "for i in range(int(np.ceil(len(X_test)/inference_batch_size))): \n",
     "    # Do model prediction\n",
     "    elem = X_test[i*inference_batch_size:min((i+1)*inference_batch_size,len(X_test))]\n",
     "    ids = id[i*inference_batch_size:min((i+1)*inference_batch_size,len(X_test))]\n",
@@ -256,7 +272,17 @@
      "output_type": "stream",
      "text": [
       "Training on:  data/training_data.json  which has  1000  data-points\n",
-      "Trained model exists. Skipping training again.\n"
+      "Epoch 0: Loss 4.843758450400445\n",
+      "Epoch 1: Loss 1.3056830919407834\n",
+      "Epoch 2: Loss 0.963068675014696\n",
+      "Epoch 3: Loss 0.9446813049870534\n",
+      "Epoch 4: Loss 0.8719852773281044\n",
+      "Epoch 5: Loss 0.5867635330158067\n",
+      "Epoch 6: Loss 0.48831840431328954\n",
+      "Epoch 7: Loss 0.5206127582173541\n",
+      "Epoch 8: Loss 0.3507806431908619\n",
+      "Epoch 9: Loss 0.29904839011273465\n",
+      "Model saved at:  trained_models_torch/version_0\n"
      ]
     }
    ],
@@ -289,7 +315,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9086517068209269"
+       "0.946792956582544"
       ]
      },
      "execution_count": 8,
@@ -342,7 +368,17 @@
       "Kicking off re-training\n",
       "255 data-points selected out of 1008\n",
       "Training on:  uptrain_smart_data__edge_cases/1/training_dataset.json  which has  2275  data-points\n",
-      "Trained model exists. Skipping training again.\n",
+      "Epoch 0: Loss 4.456094716983834\n",
+      "Epoch 1: Loss 1.5041649351908155\n",
+      "Epoch 2: Loss 0.7094659108056898\n",
+      "Epoch 3: Loss 0.5479656164785824\n",
+      "Epoch 4: Loss 0.44732532045410295\n",
+      "Epoch 5: Loss 0.4169701081771625\n",
+      "Epoch 6: Loss 0.38897821375919295\n",
+      "Epoch 7: Loss 0.2797425045332354\n",
+      "Epoch 8: Loss 0.23910698301602706\n",
+      "Epoch 9: Loss 0.21545567348820582\n",
+      "Model saved at:  trained_models_torch/version_1\n",
       "Model retraining done...\n",
       "Generating comparison report...\n",
       "Training on:  data/training_data.json  which has  1000  data-points\n",
@@ -351,8 +387,8 @@
       "Evaluating on  15731  data-points\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n",
-      "Old model accuracy:  0.9086517068209269\n",
-      "Retrained model accuracy (ie 255 smartly collected data-points added):  0.992498887546882\n",
+      "Old model accuracy:  0.946792956582544\n",
+      "Retrained model accuracy (ie 255 smartly collected data-points added):  0.9886847625707202\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n"
      ]
@@ -395,7 +431,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Training using Deep Neural Network (with Tensorflow)"
+    "### Training using Deep Neural Network (with Tensorflow), \n",
+    "\n",
+    "Note: Requires tensorflow to be installed. We ran the following code successfully with tf version 2.11.0"
    ]
   },
   {
@@ -407,8 +445,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training on:  data/training_data.json  which has  1000  data-points\n",
-      "Trained model exists. Skipping training again.\n"
+      "Training on:  data/training_data.json  which has  1000  data-points\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-01-15 22:32:39.163172: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "62/62 [==============================] - 0s 612us/step - loss: 79.1203 - binary_accuracy: 0.3730\n",
+      "Epoch 2/10\n",
+      "62/62 [==============================] - 0s 550us/step - loss: 18.0154 - binary_accuracy: 0.5383\n",
+      "Epoch 3/10\n",
+      "62/62 [==============================] - 0s 526us/step - loss: 5.8314 - binary_accuracy: 0.7470\n",
+      "Epoch 4/10\n",
+      "62/62 [==============================] - 0s 513us/step - loss: 2.9454 - binary_accuracy: 0.8488\n",
+      "Epoch 5/10\n",
+      "62/62 [==============================] - 0s 516us/step - loss: 2.1988 - binary_accuracy: 0.8780\n",
+      "Epoch 6/10\n",
+      "62/62 [==============================] - 0s 515us/step - loss: 1.9223 - binary_accuracy: 0.8871\n",
+      "Epoch 7/10\n",
+      "62/62 [==============================] - 0s 519us/step - loss: 1.7631 - binary_accuracy: 0.9062\n",
+      "Epoch 8/10\n",
+      "62/62 [==============================] - 0s 515us/step - loss: 1.6675 - binary_accuracy: 0.9093\n",
+      "Epoch 9/10\n",
+      "62/62 [==============================] - 0s 519us/step - loss: 1.5129 - binary_accuracy: 0.9093\n",
+      "Epoch 10/10\n",
+      "62/62 [==============================] - 0s 513us/step - loss: 1.4336 - binary_accuracy: 0.9194\n",
+      "INFO:tensorflow:Assets written to: trained_models_tf/version_0/assets\n",
+      "Model saved at:  trained_models_tf/version_0\n"
      ]
     }
    ],
@@ -416,8 +489,8 @@
     "import tensorflow as tf\n",
     "tf.config.set_visible_devices([], 'GPU')\n",
     "\n",
-    "from model_dnn import get_accuracy_dnn, train_model_dnn\n",
-    "train_model_dnn('data/training_data.json', 'version_0')"
+    "from model_tf import get_accuracy_tf, train_model_tf\n",
+    "train_model_tf('data/training_data.json', 'version_0')"
    ]
   },
   {
@@ -437,20 +510,13 @@
      "output_type": "stream",
      "text": [
       "Evaluating on  15731  data-points\n",
-      "492/492 [==============================] - 0s 237us/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-01-14 11:46:41.332360: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "492/492 [==============================] - 0s 350us/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.9282944504481597"
+       "0.9422795753607527"
       ]
      },
      "execution_count": 12,
@@ -459,7 +525,7 @@
     }
    ],
    "source": [
-    "get_accuracy_dnn(golden_testing_file, 'version_0')"
+    "get_accuracy_tf(golden_testing_file, 'version_0')"
    ]
   },
   {
@@ -480,8 +546,8 @@
     "                is_model_signal=True) < 0.9\n",
     "\n",
     "cfg['checks'][0].update({\"signal_formulae\": (pushup_edge_case | low_conf_edge_case)})\n",
-    "cfg['training_args'].update({'training_func': train_model_dnn})\n",
-    "cfg['evaluation_args'].update({'inference_func': get_accuracy_dnn})"
+    "cfg['training_args'].update({'training_func': train_model_tf})\n",
+    "cfg['evaluation_args'].update({'inference_func': get_accuracy_tf})"
    ]
   },
   {
@@ -495,36 +561,57 @@
      "text": [
       "Deleting the folder:  uptrain_smart_data__edge_cases\n",
       "Deleting the folder:  uptrain_logs\n",
-      "52  edge-cases collected out of  176  inferred samples\n",
-      "102  edge-cases collected out of  384  inferred samples\n",
-      "152  edge-cases collected out of  592  inferred samples\n",
-      "200  edge-cases collected out of  800  inferred samples\n",
-      "252  edge-cases collected out of  960  inferred samples\n",
+      "50  edge-cases collected out of  192  inferred samples\n",
+      "101  edge-cases collected out of  400  inferred samples\n",
+      "150  edge-cases collected out of  608  inferred samples\n",
+      "202  edge-cases collected out of  816  inferred samples\n",
+      "252  edge-cases collected out of  976  inferred samples\n",
       "Kicking off re-training\n",
-      "252 data-points selected out of 960\n",
+      "252 data-points selected out of 976\n",
       "Training on:  uptrain_smart_data__edge_cases/1/training_dataset.json  which has  2260  data-points\n",
-      "Trained model exists. Skipping training again.\n",
+      "Epoch 1/10\n",
+      "141/141 [==============================] - 0s 547us/step - loss: 38.9979 - binary_accuracy: 0.5638\n",
+      "Epoch 2/10\n",
+      "141/141 [==============================] - 0s 501us/step - loss: 6.5352 - binary_accuracy: 0.8054\n",
+      "Epoch 3/10\n",
+      "141/141 [==============================] - 0s 521us/step - loss: 2.6563 - binary_accuracy: 0.8808\n",
+      "Epoch 4/10\n",
+      "141/141 [==============================] - 0s 510us/step - loss: 1.8180 - binary_accuracy: 0.9025\n",
+      "Epoch 5/10\n",
+      "141/141 [==============================] - 0s 501us/step - loss: 1.3284 - binary_accuracy: 0.9242\n",
+      "Epoch 6/10\n",
+      "141/141 [==============================] - 0s 503us/step - loss: 1.1194 - binary_accuracy: 0.9313\n",
+      "Epoch 7/10\n",
+      "141/141 [==============================] - 0s 510us/step - loss: 0.9591 - binary_accuracy: 0.9384\n",
+      "Epoch 8/10\n",
+      "141/141 [==============================] - 0s 504us/step - loss: 0.8411 - binary_accuracy: 0.9433\n",
+      "Epoch 9/10\n",
+      "141/141 [==============================] - 0s 492us/step - loss: 0.7836 - binary_accuracy: 0.9490\n",
+      "Epoch 10/10\n",
+      "141/141 [==============================] - 0s 500us/step - loss: 0.7556 - binary_accuracy: 0.9468\n",
+      "INFO:tensorflow:Assets written to: trained_models_tf/version_1/assets\n",
+      "Model saved at:  trained_models_tf/version_1\n",
       "Model retraining done...\n",
       "Generating comparison report...\n",
       "Training on:  data/training_data.json  which has  1000  data-points\n",
       "Trained model exists. Skipping training again.\n",
       "Evaluating on  15731  data-points\n",
-      "492/492 [==============================] - 0s 201us/step\n",
+      "492/492 [==============================] - 0s 343us/step\n",
       "Evaluating on  15731  data-points\n",
-      "492/492 [==============================] - 0s 217us/step\n",
+      "492/492 [==============================] - 0s 344us/step\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n",
-      "Old model accuracy:  0.9282944504481597\n",
-      "Retrained model accuracy (ie 252 smartly collected data-points added):  0.9727925751700464\n",
+      "Old model accuracy:  0.9422795753607527\n",
+      "Retrained model accuracy (ie 252 smartly collected data-points added):  0.973301125166868\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "framework_dnn = uptrain.Framework(cfg)\n",
+    "framework_tf = uptrain.Framework(cfg)\n",
     "\n",
-    "model_dir = 'trained_models_dnn/'\n",
+    "model_dir = 'trained_models_tf/'\n",
     "model_save_name = 'version_0'\n",
     "inference_batch_size = 16\n",
     "real_world_dataset = KpsDataset(\n",
@@ -543,10 +630,10 @@
     "            preds = model.predict(inputs['data']['kps'])\n",
     "\n",
     "    # Log model inputs and outputs to the uptrain Framework\n",
-    "    idens = framework_dnn.log(inputs=inputs, outputs=preds)\n",
+    "    idens = framework_tf.log(inputs=inputs, outputs=preds)\n",
     "\n",
     "    # Retrain only once\n",
-    "    if framework_dnn.version > 1:\n",
+    "    if framework_tf.version > 1:\n",
     "        break"
    ]
   }
@@ -567,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
